# collision-detection-bvh-GPU

./: .gitignore  CMakeLists.txt  README.md
assets/ptx/: cuda_compile_ptx_1_generated_edgeTriangles.cu.ptx
example/: CMakeLists.txt
example/optixTest/: CMakeLists.txt  main.cu
example/randPoints/: CMakeLists.txt  main.cu
example/simulationData/: CMakeLists.txt  main.cu
include/: CMakeLists.txt
include/base/: BvhUtils.cuh  CudaThrustUtils.hpp  Utils.cuh  aggregatedAttribs.h  bv.h  common.h  origin.h
include/optix9/: optix.h  optix_device.h  optix_function_table.h  optix_host.h  optix_stubs.h  optix_types.h
include/optix9/internal/: optix_device_impl.h  optix_device_impl_coop_vec.h  optix_device_impl_transformations.h
include/utility/: CMakeLists.txt  CudaDeviceUtils.cu  CudaDeviceUtils.h
src/: CMakeLists.txt
src/LBVH/: AtomicFunctions.cuh  BvhBV.cu  BvhBV.h  CMakeLists.txt  ExtNode.cu  ExtNode.h  IntNode.cu  IntNode.h  LBvhBuildKernels.cu  LBvhKernels.h  MergeNode.cu  MergeNode.h  Mesh.cpp  Mesh.h  lbvh.cu  lbvh.h  main.cu
src/common/: CMakeLists.txt  Common.h  DeviceHostVector.cu  DeviceHostVector.h  HelperCompare.h  HelperCuda.h  HelperMath.h  HelperString.h
src/optixLauncher/: CMakeLists.txt  edgeTriangles.cu  edgeTriangles.h  optixLauncher.cpp  optixLauncher.cu  optixLauncher.h
