FILE(GLOB SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)

FILE(GLOB HEADER_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cuh, ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

set(${PROJECT_NAME} CUDA_UTILS)
add_library(${PROJECT_NAME}  ${SRC_FILES} ${HEADER_FILES})