FILE(GLOB SRC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)

FILE(GLOB HEADER_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/*.cuh, ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_executable(LBVH ${SRC_FILES} ${HEADER_FILES})
target_link_libraries(LBVH Vector)